nova_tests/plan148/neg/mo_neg_priv_value.nv
// EXPECT_COMPILE_ERROR E_MODIFIER_ORDER
//
// Plan 148 Р¤.1 (D241) вЂ” negative: `priv value` is out of canonical order.
//
// Canonical order is `value priv` (type-level representation before
// field-default visibility). `priv value` inverts ranks (priv=2 before
// value=0) в†’ E_MODIFIER_ORDER with fix-it "reorder to `value priv`".
// This is the flip of the retired plan124_8 order-independence test (A3).
module neg.mo_neg_priv_value

type Bv priv value {
    pub ro id u64
    secret int
}

fn Bv.new(i u64, s int) -> Bv => { id: i, secret: s }
